<resources>
    <string name="app_name">StanFood</string>
    <string name="title_activity_maps"></string>
    <string name="CustomBottomSheetBehavior">stanford.cs194.stanfood.CustomBottomSheetBehavior</string>
    <string name="bottom_sheet_peek">Click on a marker to find free food!</string>
    <string name="bottom_sheet_content">Bottom Sheet Content!</string>
    <string name="login_signup">Log In or Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="create_event">Create an Event</string>
    <string name="delete_event">Delete an Event</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="createEventTitle">Create Your Event!</string>
    <string name="editEventTitle">Tap an Event to Delete It!</string>
    <string name="event_name">Event Name</string>
    <string name="food_description">Food Description</string>
    <string name="event_location">Event Location</string>
    <string name="event_description">Event Description</string>
    <string name="event_description_header">Event Description:&#160;</string>
    <string name="event_location_header">Location:&#160;</string>
    <string name="event_time_header">Time:&#160;</string>
    <string name="createButtonText">Create</string>
    <string name="refreshViewText">Refresh Events</string>
    <string name="use_current_location">Use Current Location?</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="default_notification_channel_id">DefaultNotificationChannel</string>
    <string name="new_event_notification_title">Free food added in your area!</string>
    <string name="saveSettingsText">Save</string>
    <string name="userSettingsTitle">User Settings</string>
    <string name="receive_push_switch">Receive Push Notifications?</string>
    <string name="user_settings">Settings</string>
    <string name="timeWindowTitle">Only Receive Notifications for Events Starting Between These Times:</string>
    <string name="event_start_time">Event Start Time</string>
    <string name="event_end_time">Event End Time</string>
    <string name="map_clock_dialog_title">Event Time Filter</string>
    <string name="map_clock_dialog_header">Currently showing events between</string>
    <string name="map_clock_dialog_break">and</string>
    <string name="map_clock_dialog_done">Ok</string>
    <string name="date_time_picker_done">Ok</string>
    <string name="date_time_picker_cancel">Cancel</string>
</resources>