<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/blank_option"
            android:visible="false"
            android:title="" />
        <item
            android:id="@+id/login_signup"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/login_signup"
            android:font="@font/gotham_book"/>
        <item
            android:id="@+id/create_event"
            android:icon="@drawable/ic_add_location_black_nav_24dp"
            android:title="@string/create_event"
            android:font="@font/gotham_book"/>
        <item
            android:id="@+id/edit_event"
            android:icon="@drawable/ic_edit_location_black_24dp"
            android:title="@string/edit_event"
            android:font="@font/gotham_book"/>
        <item
            android:id="@+id/user_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/user_settings"
            android:font="@font/gotham_book"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/logout"
            android:font="@font/gotham_book"/>
    </group>
</menu>